--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@nuxtjs/axios": "^5.13.6",
     "@nuxtjs/pwa": "^3.3.5",
     "core-js": "^3.15.1",
+    "moment": "^2.29.1",
     "nuxt": "^2.15.7",
     "vuetify": "^2.5.5"
   },
