--- a/package.json
+++ b/package.json
@@ -13,8 +13,14 @@
   "dependencies": {
     "@nuxtjs/axios": "^5.13.6",
     "@nuxtjs/pwa": "^3.3.5",
+    "axios": "^0.21.4",
+    "body-parser": "^1.19.0",
+    "cookie-parser": "^1.4.6",
     "core-js": "^3.15.1",
+    "dotenv": "^9.0.2",
+    "express": "^4.17.1",
     "moment": "^2.29.1",
+    "mongoose": "^6.0.13",
     "nuxt": "^2.15.7",
     "vuetify": "^2.5.5"
   },
