--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "dependencies": {
     "@nuxtjs/axios": "^5.13.6",
     "@nuxtjs/pwa": "^3.3.5",
+    "apexcharts": "^3.32.0",
     "axios": "^0.21.4",
     "body-parser": "^1.19.0",
     "cookie-parser": "^1.4.6",
@@ -22,6 +23,7 @@
     "moment": "^2.29.1",
     "mongoose": "^6.0.13",
     "nuxt": "^2.15.7",
+    "vue-apexcharts": "^1.6.2",
     "vuetify": "^2.5.5"
   },
   "devDependencies": {
