--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -13,6 +13,9 @@ jobs:
       - 
         name: Checkout
         uses: actions/checkout@v2
+      -
+        name: Set up QEMU
+        uses: docker/setup-qemu-action@v1
       -       
         name: Set up Docker Buildx
         id: buildx
@@ -35,9 +38,9 @@ jobs:
         id: docker_build
         uses: docker/build-push-action@v2
         with:
-          context: ./ 
+          context: ./
+          platforms: linux/amd64,linux/arm64
           file: ./Dockerfile
-          builder: ${{ steps.buildx.outputs.name }}
           push: true
           tags: itsokaycz/scheduler-docker:latest
           cache-from: type=local,src=/tmp/.buildx-cache
