--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -39,7 +39,7 @@ jobs:
         uses: docker/build-push-action@v2
         with:
           context: ./
-          platforms: linux/arm64/v8
+          platforms: linux/amd64,linux/arm64
           file: ./Dockerfile
           push: true
           tags: itsokaycz/scheduler-docker:latest
