--- a/.github/workflows/github-registry.yml
+++ b/.github/workflows/github-registry.yml
@@ -43,7 +43,7 @@ jobs:
         with:
           context: ./ 
           file: ./Dockerfile
-          platforms: linux/arm64
+          platforms: linux/amd64,linux/arm64
           push: true
           tags: ghcr.io/itsokaycz/scheduler-docker:latest
           cache-from: type=local,src=/tmp/.buildx-cache
