--- a/package.json
+++ b/package.json
@@ -33,8 +33,12 @@
     "@nuxtjs/eslint-config-typescript": "^6.0.1",
     "@nuxtjs/eslint-module": "^3.0.2",
     "@nuxtjs/vuetify": "^1.12.1",
+    "cache-loader": "^4.1.0",
     "eslint": "^7.29.0",
     "eslint-plugin-nuxt": "^2.0.0",
-    "eslint-plugin-vue": "^7.12.1"
+    "eslint-plugin-vue": "^7.12.1",
+    "hard-source-webpack-plugin": "^0.13.1",
+    "terser-webpack-plugin": "^4.2.3",
+    "thread-loader": "^3.0.4"
   }
 }
