Added env variables

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,6 +8,8 @@ services:
   working_dir: /app
   environment:
    DB_HOST: mongodb
+   authPath: ${SCHEDULER_AUTH_PATH}
+   authCooke: ${SCHEDULER_AUTH_COOKIE}
  
  mongodb:
   image: mongo:4.4.10
