--- a/package.json
+++ b/package.json
@@ -20,6 +20,8 @@
     "core-js": "^3.15.1",
     "dotenv": "^9.0.2",
     "express": "^4.17.1",
+    "just-clone": "^5.0.1",
+    "lodash.clonedeep": "^4.5.0",
     "moment": "^2.29.1",
     "mongoose": "^6.0.13",
     "nuxt": "^2.15.7",
